Initial: Finance Portal MVP
- Backend: Spring Boot 4.0.1, Java 21, modüler paket yapısı
- Modüller: market (bond/fund/fx/stocks/landing), history, news, user
- Persistence: PostgreSQL + Flyway (V2-V13 migration'lar)
- Cache: Redis
- Security: Keycloak OAuth2/OIDC (henüz tam aktif değil)
- Frontend: React + TypeScript + Vite
- Test altyapısı: H2 in-memory, MockWebServer
- Dokümana uygun ErrorCode enum'u + exception hiyerarşisi